# name: test_conventional[1000.0]
  array([[5.32147e+03, 3.10851e+03, 1.80062e+03, 1.03395e+03, 5.88776e+02,
          3.32606e+02, 1.86495e+02, 1.03848e+02, 5.74615e+01, 3.16092e+01,
          1.72937e+01, 9.41300e+00, 5.09829e+00, 2.74789e+00, 1.47375e+00,
          7.86361e-01, 4.17314e-01, 2.20172e-01, 1.15424e-01, 6.00891e-02,
          3.10411e-02, 1.58990e-02, 8.06692e-03, 4.05087e-03, 2.01132e-03,
          9.86544e-04, 4.77666e-04, 2.28180e-04, 1.07528e-04, 5.00100e-05],
         [9.72794e+03, 5.84775e+03, 3.49698e+03, 2.07820e+03, 1.22608e+03,
          7.17459e+02, 4.16153e+02, 2.39186e+02, 1.36216e+02, 7.68785e+01,
          4.30128e+01, 2.38661e+01, 1.31382e+01, 7.17819e+00, 3.89340e+00,
          2.09675e+00, 1.12116e+00, 5.95153e-01, 3.13556e-01, 1.63888e-01,
          8.49339e-02, 4.36144e-02, 2.21749e-02, 1.11536e-02, 5.54520e-03,
          2.72275e-03, 1.31940e-03, 6.30694e-04, 2.97367e-04, 1.38360e-04],
         [9.70670e+03, 5.83021e+03, 3.48274e+03, 2.06677e+03, 1.21695e+03,
          7.10154e+02, 4.10248e+02, 2.34330e+02, 1.32141e+02, 7.33967e+01,
          4.00094e+01, 2.12815e+01, 1.09475e+01, 5.54719e+00, 2.88617e+00,
          1.46827e+00, 7.27625e-01, 3.50307e-01, 1.63450e-01, 7.37505e-02,
          3.21076e-02, 1.34500e-02, 5.39956e-03, 2.06392e-03, 7.42651e-04,
          2.46108e-04, 7.15221e-05, 1.66188e-05, 5.94295e-06, 2.62554e-06],
         [4.77460e+03, 2.66132e+03, 1.43711e+03, 7.44828e+02, 3.94782e+02,
          2.10005e+02, 1.08660e+02, 5.45727e+01, 2.65574e+01, 1.25048e+01,
          5.68922e+00, 2.49710e+00, 1.05487e+00, 4.27079e-01, 1.64456e-01,
          5.93478e-02, 1.94525e-02, 5.33964e-03, 1.29859e-03, 5.99724e-04,
          2.81662e-04, 1.30327e-04, 5.93020e-05, 2.64759e-05, 1.15665e-05,
          4.92859e-06, 2.04076e-06, 8.17601e-07, 3.15583e-07, 1.16804e-07]])
---
# name: test_conventional[None]
  array([[5.32147e+03, 3.10851e+03, 1.80062e+03, 1.03395e+03, 5.88776e+02,
          3.32606e+02, 1.86495e+02, 1.03848e+02, 5.74615e+01, 3.16092e+01,
          1.72937e+01, 9.41300e+00, 5.09829e+00, 2.74789e+00, 1.47375e+00,
          7.86361e-01, 4.17314e-01, 2.20172e-01, 1.15424e-01, 6.00891e-02,
          3.10411e-02, 1.58990e-02, 8.06692e-03, 4.05087e-03, 2.01132e-03,
          9.86544e-04, 4.77666e-04, 2.28180e-04, 1.07528e-04, 5.00100e-05],
         [9.72794e+03, 5.84775e+03, 3.49698e+03, 2.07820e+03, 1.22608e+03,
          7.17459e+02, 4.16153e+02, 2.39186e+02, 1.36216e+02, 7.68785e+01,
          4.30128e+01, 2.38661e+01, 1.31382e+01, 7.17819e+00, 3.89340e+00,
          2.09675e+00, 1.12116e+00, 5.95153e-01, 3.13556e-01, 1.63888e-01,
          8.49339e-02, 4.36144e-02, 2.21749e-02, 1.11536e-02, 5.54520e-03,
          2.72275e-03, 1.31940e-03, 6.30694e-04, 2.97367e-04, 1.38360e-04],
         [9.72794e+03, 5.84775e+03, 3.49698e+03, 2.07820e+03, 1.22608e+03,
          7.17459e+02, 4.16153e+02, 2.39186e+02, 1.36216e+02, 7.68785e+01,
          4.30128e+01, 2.38661e+01, 1.31382e+01, 7.17819e+00, 3.89340e+00,
          2.09675e+00, 1.12116e+00, 5.95153e-01, 3.13556e-01, 1.63888e-01,
          8.49339e-02, 4.36144e-02, 2.21749e-02, 1.11536e-02, 5.54520e-03,
          2.72275e-03, 1.31940e-03, 6.30694e-04, 2.97367e-04, 1.38360e-04],
         [5.32147e+03, 3.10851e+03, 1.80062e+03, 1.03395e+03, 5.88776e+02,
          3.32606e+02, 1.86495e+02, 1.03848e+02, 5.74615e+01, 3.16092e+01,
          1.72937e+01, 9.41300e+00, 5.09829e+00, 2.74789e+00, 1.47375e+00,
          7.86361e-01, 4.17314e-01, 2.20172e-01, 1.15424e-01, 6.00891e-02,
          3.10411e-02, 1.58990e-02, 8.06692e-03, 4.05087e-03, 2.01132e-03,
          9.86544e-04, 4.77666e-04, 2.28180e-04, 1.07528e-04, 5.00100e-05]])
---
# name: test_prompt[1000.0]
  array([[3.34791e+01, 2.39068e+01, 1.70371e+01, 1.21155e+01, 8.59598e+00,
          6.08391e+00, 4.29454e+00, 3.02270e+00, 2.12077e+00, 1.48277e+00,
          1.03266e+00, 7.16067e-01, 4.94104e-01, 3.39061e-01, 2.31211e-01,
          1.56546e-01, 1.05139e-01, 6.99717e-02, 4.60926e-02, 3.00193e-02,
          1.93094e-02, 1.22555e-02, 7.67005e-03, 4.73185e-03, 2.87798e-03,
          1.72681e-03, 1.02330e-03, 5.99874e-04, 3.48563e-04, 2.01199e-04],
         [3.34969e+01, 2.39196e+01, 1.70465e+01, 1.21225e+01, 8.60126e+00,
          6.08792e+00, 4.29760e+00, 3.02502e+00, 2.12253e+00, 1.48409e+00,
          1.03365e+00, 7.16798e-01, 4.94640e-01, 3.39448e-01, 2.31488e-01,
          1.56742e-01, 1.05275e-01, 7.00647e-02, 4.61551e-02, 3.00607e-02,
          1.93362e-02, 1.22725e-02, 7.68056e-03, 4.73821e-03, 2.88173e-03,
          1.72897e-03, 1.02451e-03, 6.00534e-04, 3.48912e-04, 2.01377e-04],
         [3.34594e+01, 2.38823e+01, 1.70098e+01, 1.20867e+01, 8.56622e+00,
          6.05342e+00, 4.26313e+00, 2.98991e+00, 2.08602e+00, 1.44542e+00,
          9.92288e-01, 6.72593e-01, 4.48016e-01, 2.96069e-01, 1.97392e-01,
          1.29714e-01, 8.38448e-02, 5.32409e-02, 3.31891e-02, 2.03088e-02,
          1.22040e-02, 7.20793e-03, 4.18890e-03, 2.39837e-03, 1.35472e-03,
          7.55917e-04, 4.17218e-04, 2.28574e-04, 1.26998e-04, 7.01964e-05],
         [3.14104e+01, 2.18258e+01, 1.49503e+01, 1.00593e+01, 6.85143e+00,
          4.66961e+00, 3.14080e+00, 2.08318e+00, 1.36210e+00, 8.78282e-01,
          5.58890e-01, 3.51373e-01, 2.18521e-01, 1.34573e-01, 8.21317e-02,
          4.96934e-02, 2.98014e-02, 1.77039e-02, 1.05054e-02, 6.28256e-03,
          3.69242e-03, 2.12824e-03, 1.20151e-03, 6.63565e-04, 3.58088e-04,
          1.88584e-04, 9.67924e-05, 4.83288e-05, 2.34217e-05, 1.09810e-05]])
---
# name: test_prompt[None]
  array([[3.34791e+01, 2.39068e+01, 1.70371e+01, 1.21155e+01, 8.59598e+00,
          6.08391e+00, 4.29454e+00, 3.02270e+00, 2.12077e+00, 1.48277e+00,
          1.03266e+00, 7.16067e-01, 4.94104e-01, 3.39061e-01, 2.31211e-01,
          1.56546e-01, 1.05139e-01, 6.99717e-02, 4.60926e-02, 3.00193e-02,
          1.93094e-02, 1.22555e-02, 7.67005e-03, 4.73185e-03, 2.87798e-03,
          1.72681e-03, 1.02330e-03, 5.99874e-04, 3.48563e-04, 2.01199e-04],
         [3.34969e+01, 2.39196e+01, 1.70465e+01, 1.21225e+01, 8.60126e+00,
          6.08792e+00, 4.29760e+00, 3.02502e+00, 2.12253e+00, 1.48409e+00,
          1.03365e+00, 7.16798e-01, 4.94640e-01, 3.39448e-01, 2.31488e-01,
          1.56742e-01, 1.05275e-01, 7.00647e-02, 4.61551e-02, 3.00607e-02,
          1.93362e-02, 1.22725e-02, 7.68056e-03, 4.73821e-03, 2.88173e-03,
          1.72897e-03, 1.02451e-03, 6.00534e-04, 3.48912e-04, 2.01377e-04],
         [3.34969e+01, 2.39196e+01, 1.70465e+01, 1.21225e+01, 8.60126e+00,
          6.08792e+00, 4.29760e+00, 3.02502e+00, 2.12253e+00, 1.48409e+00,
          1.03365e+00, 7.16798e-01, 4.94640e-01, 3.39448e-01, 2.31488e-01,
          1.56742e-01, 1.05275e-01, 7.00647e-02, 4.61551e-02, 3.00607e-02,
          1.93362e-02, 1.22725e-02, 7.68056e-03, 4.73821e-03, 2.88173e-03,
          1.72897e-03, 1.02451e-03, 6.00534e-04, 3.48912e-04, 2.01377e-04],
         [3.34791e+01, 2.39068e+01, 1.70371e+01, 1.21155e+01, 8.59598e+00,
          6.08391e+00, 4.29454e+00, 3.02270e+00, 2.12077e+00, 1.48277e+00,
          1.03266e+00, 7.16067e-01, 4.94104e-01, 3.39061e-01, 2.31211e-01,
          1.56546e-01, 1.05139e-01, 6.99717e-02, 4.60926e-02, 3.00193e-02,
          1.93094e-02, 1.22555e-02, 7.67005e-03, 4.73185e-03, 2.87798e-03,
          1.72681e-03, 1.02330e-03, 5.99874e-04, 3.48563e-04, 2.01199e-04]])
---
# name: test_veto_probability[1000.0-charm-NuEBar]
  array([[0.99988, 0.99027, 0.97397, 0.96164, 0.95386],
         [0.99858, 0.94149, 0.87043, 0.828  , 0.80561],
         [0.99066, 0.79357, 0.64329, 0.5737 , 0.54255],
         [0.95624, 0.56544, 0.37192, 0.29953, 0.27111],
         [0.85129, 0.30246, 0.13564, 0.08866, 0.07299]])
---
# name: test_veto_probability[1000.0-charm-NuE]
  array([[0.99988, 0.99027, 0.97397, 0.96164, 0.95386],
         [0.99858, 0.94149, 0.87043, 0.828  , 0.80561],
         [0.99066, 0.79357, 0.64329, 0.5737 , 0.54255],
         [0.95624, 0.56544, 0.37192, 0.29953, 0.27111],
         [0.85129, 0.30246, 0.13564, 0.08866, 0.07299]])
---
# name: test_veto_probability[1000.0-charm-NuMuBar]
  array([[9.9988e-01, 9.8772e-01, 9.5692e-01, 9.2274e-01, 8.9300e-01],
         [9.9802e-01, 7.6532e-01, 6.1230e-01, 5.2093e-01, 4.6433e-01],
         [9.1597e-01, 3.2909e-01, 1.3449e-01, 7.1910e-02, 4.4710e-02],
         [5.0837e-01, 1.0000e-04, 1.0000e-04, 1.0000e-04, 1.0000e-04],
         [3.9280e-02, 1.0000e-04, 1.0000e-04, 1.0000e-04, 1.0000e-04]])
---
# name: test_veto_probability[1000.0-charm-NuMu]
  array([[9.9988e-01, 9.8772e-01, 9.5692e-01, 9.2274e-01, 8.9300e-01],
         [9.9802e-01, 7.6532e-01, 6.1230e-01, 5.2093e-01, 4.6433e-01],
         [9.1597e-01, 3.2909e-01, 1.3449e-01, 7.1910e-02, 4.4710e-02],
         [5.0837e-01, 1.0000e-04, 1.0000e-04, 1.0000e-04, 1.0000e-04],
         [3.9280e-02, 1.0000e-04, 1.0000e-04, 1.0000e-04, 1.0000e-04]])
---
# name: test_veto_probability[1000.0-conventional-NuEBar]
  array([[0.9997 , 0.97953, 0.95003, 0.92994, 0.91818],
         [0.9969 , 0.90559, 0.81217, 0.76142, 0.7361 ],
         [0.98399, 0.73943, 0.57573, 0.50401, 0.47297],
         [0.94001, 0.51361, 0.32142, 0.25267, 0.22631],
         [0.81411, 0.25142, 0.10334, 0.06481, 0.05243]])
---
# name: test_veto_probability[1000.0-conventional-NuE]
  array([[0.9997 , 0.97953, 0.95003, 0.92994, 0.91818],
         [0.9969 , 0.90559, 0.81217, 0.76142, 0.7361 ],
         [0.98399, 0.73943, 0.57573, 0.50401, 0.47297],
         [0.94001, 0.51361, 0.32142, 0.25267, 0.22631],
         [0.81411, 0.25142, 0.10334, 0.06481, 0.05243]])
---
# name: test_veto_probability[1000.0-conventional-NuMuBar]
  array([[9.9976e-01, 9.8020e-01, 9.4076e-01, 9.0220e-01, 8.7069e-01],
         [9.9685e-01, 7.4685e-01, 5.8796e-01, 4.9673e-01, 4.4149e-01],
         [9.1218e-01, 3.1831e-01, 1.2817e-01, 6.8130e-02, 4.2260e-02],
         [5.0486e-01, 1.0000e-04, 1.0000e-04, 1.0000e-04, 1.0000e-04],
         [3.8950e-02, 1.0000e-04, 1.0000e-04, 1.0000e-04, 1.0000e-04]])
---
# name: test_veto_probability[1000.0-conventional-NuMu]
  array([[9.9976e-01, 9.8020e-01, 9.4076e-01, 9.0220e-01, 8.7069e-01],
         [9.9685e-01, 7.4685e-01, 5.8796e-01, 4.9673e-01, 4.4149e-01],
         [9.1218e-01, 3.1831e-01, 1.2817e-01, 6.8130e-02, 4.2260e-02],
         [5.0486e-01, 1.0000e-04, 1.0000e-04, 1.0000e-04, 1.0000e-04],
         [3.8950e-02, 1.0000e-04, 1.0000e-04, 1.0000e-04, 1.0000e-04]])
---
